commit 2 работа с окном в wpf

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,9 +27,10 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock Text="{Binding PublishDate}"/>
+                        <TextBlock Text="{Binding PublishDate} "/>
                         <TextBlock Text="{Binding Title}"/>
-                         
+                        <!--<TextBlock Text="{Binding First_Name}"/>
+                        <TextBlock Text="{Binding Age}"/>-->
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
