--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -26,13 +26,15 @@
                  HorizontalAlignment="Center" Grid.RowSpan="2">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
-                        <TextBlock Text="{Binding PublishDate} "/>
-                        <TextBlock Text="{Binding Title}"/>
+                    <StackPanel >
+                        <TextBlock  Text="{Binding PublishDate}" FontSize="16" Foreground="#FF00FF90"/>
+                        <TextBlock Text="{Binding Title}" FontSize="16" Foreground="#FF040E44"/>
+                        <TextBlock   x:Name="discrip_text" Text="{Binding Discription_News}"/>
                         <!--<TextBlock Text="{Binding First_Name}"/>
                         <TextBlock Text="{Binding Age}"/>-->
                     </StackPanel>
                 </DataTemplate>
+                
             </ListBox.ItemTemplate>
         </ListBox>
         <Button x:Name="start_rss_fider" 
