commit 4 работа с переносом строк

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -26,10 +26,10 @@
                  HorizontalAlignment="Center" Grid.RowSpan="2">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel >
-                        <TextBlock  Text="{Binding PublishDate}" FontSize="16" Foreground="#FF00FF90"/>
+                    <StackPanel Orientation="Vertical" >
+                        <TextBlock   Text="{Binding PublishDate}" FontSize="16" Foreground="#FF00FF90"/>
                         <TextBlock Text="{Binding Title}" FontSize="16" Foreground="#FF040E44"/>
-                        <TextBlock   x:Name="discrip_text" Text="{Binding Discription_News}"/>
+                        <TextBlock TextWrapping="Wrap"  Text="{Binding Discription_News}"/>
                         <!--<TextBlock Text="{Binding First_Name}"/>
                         <TextBlock Text="{Binding Age}"/>-->
                     </StackPanel>
