--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,32 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RSS_Fider"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1920" Width="1080"
-         SizeToContent ="Height" MinHeight="400" MinWidth="400">
-    <Grid>
+        Title="MainWindow" Height="1800" Width="1080"
+         SizeToContent ="Height" MinHeight="1000" MinWidth="1080" MaxWidth ="1080"  Background ="#FF212121"  >
+    <Grid> 
         <Grid.RowDefinitions>
-            <RowDefinition Height="5*"/>
+            <RowDefinition Height="10*"/>
             <RowDefinition Height="233*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions >
-            <ColumnDefinition   Width="65*"/>
+            <ColumnDefinition   Width="606*"/>
+            <ColumnDefinition Width="475*"/>
 
-            <ColumnDefinition Width="7*"/>
+
         </Grid.ColumnDefinitions >
         <ListBox x:Name="listRss"
-                 Grid.Row="1"
                  Grid.Column ="0"
-                 d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,10,0,10" 
-                 Background ="#FF22212D" Width="950" 
+                 d:ItemsSource="{d:SampleData ItemCount=5}" Margin="65,10,0,0" 
+                 Background ="#FF212121" Width="950" 
                  HorizontalContentAlignment="Left" 
-                 HorizontalAlignment="Center" Grid.RowSpan="2">
+                 HorizontalAlignment="Left" Grid.ColumnSpan="2" Grid.Row="1">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical" >
-                        <TextBlock   Text="{Binding PublishDate}" FontSize="17" Foreground="#FF00FF90"/>
+                        <TextBlock   Text="{Binding PublishDate}" FontSize="17" Foreground="#FF8BD7FF"/>
                         <TextBlock>
                              <Hyperlink x:Name="link_tb" Tag ="{Binding Uri}"   Click="hyperlink_Click">
-                                 <TextBlock x:Name ="link_text_block" Text="{Binding Title}" FontSize="17" Foreground="#FFF0FFAF"/> 
+                                 <TextBlock x:Name ="link_text_block" Text="{Binding Title}" FontSize="17" Foreground="#FFFFE7A4"/> 
                              </Hyperlink> 
                         </TextBlock>
 
@@ -45,28 +45,30 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <Border BorderThickness="1"
+                 
         BorderBrush="Transparent"
         Background="DarkCyan"
+        HorizontalAlignment="Left"
         VerticalAlignment="Top"
         CornerRadius="4"
-        Grid.Row="1"
+        Grid.Row="0"
         Grid.Column ="1"      
         Height="35"
-        Width="75"
-        Padding="2" Margin="15,10,15,0">
+        Width="78"
+        Padding="2" Margin="10,11,0,0">
             <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                     BorderThickness="0"
                     x:Name="start_rss_fider"
                     Content="Запустить"
-                    VerticalAlignment="Stretch"
-                    Grid.Row="2"
-                    Grid.Column ="1"  
+                    Grid.Row="0"
+                    Grid.Column ="1"
                     Click="button_start_rss_fider_Click"
-                    HorizontalAlignment="Stretch"
+                    
                     Background="DarkCyan"
-                    Foreground="White"/>
+                    Foreground="White" Width="70" FontSize="14"/>
         </Border>
 
-        <TextBlock x:Name="Head_Title" HorizontalAlignment="Left" Margin="380,0,0,0" TextWrapping="Wrap" Text="RSS Фидер Игоря мощного" VerticalAlignment="Center" TextAlignment="Center" Height="40" Width="320" FontSize="22"/>
+        <TextBlock x:Name="Head_Title" Grid.Row="0" HorizontalAlignment="Left" Margin="472,10,0,0" TextWrapping="Wrap" Text="RSS Фидер" VerticalAlignment="Top" TextAlignment="Center" Height="33" Width="136" FontSize="22" Grid.ColumnSpan="2" Foreground="White"/>
 
     </Grid>
 
