--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RSS_Fider"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1800" Width="1080"
-         SizeToContent ="Height" MinHeight="1000" MinWidth="1080" MaxWidth ="1080"  Background ="#FF212121"  >
-    <Grid> 
+        Title="MainWindow" Height="1800" Width="1180"
+         SizeToContent ="Height" MinHeight="1000" MinWidth="1080" MaxWidth ="1180"  Background ="#FF212121"  >
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10*"/>
             <RowDefinition Height="233*"/>
@@ -20,24 +20,30 @@
         </Grid.ColumnDefinitions >
         <ListBox x:Name="listRss"
                  Grid.Column ="0"
-                 d:ItemsSource="{d:SampleData ItemCount=5}" Margin="65,10,0,0" 
-                 Background ="#FF212121" Width="950" 
+                 d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,73,0,10" 
+                 Background ="#FF212121" Width="1150" 
                  HorizontalContentAlignment="Left" 
-                 HorizontalAlignment="Left" Grid.ColumnSpan="2" Grid.Row="1">
+                 
+                 HorizontalAlignment="Left" Grid.ColumnSpan="2" Grid.RowSpan="2">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Vertical" >
-                        <TextBlock   Text="{Binding PublishDate}" FontSize="17" Foreground="#FF8BD7FF"/>
-                        <TextBlock>
+                    <StackPanel Orientation="Vertical" 
+                                Margin="0,30,0,0"
+                                >
+                        <TextBlock   Text="{Binding PublishDate}" FontSize="23" Foreground="#FF8BD7FF"/>
+                        <TextBlock TextWrapping="Wrap" Margin="0,2,0,0">
                              <Hyperlink x:Name="link_tb" Tag ="{Binding Uri}"   Click="hyperlink_Click">
-                                 <TextBlock x:Name ="link_text_block" Text="{Binding Title}" FontSize="17" Foreground="#FFFFE7A4"/> 
+                                 <TextBlock x:Name ="link_text_block"
+                                            MaxWidth="1110" TextWrapping="Wrap"
+                                            Text="{Binding Title}" FontSize="22" Foreground="#FFFFE7A4"/> 
                              </Hyperlink> 
                         </TextBlock>
 
                         <TextBlock TextWrapping="Wrap" 
-                                   FontSize="15"
+                                   Margin="0,2,0,0"
+                                   FontSize="20"
                                    Foreground="White"
-                                   MaxWidth="920"
+                                   MaxWidth="1110"
                                    Text="{Binding Discription_News}"/>
                     </StackPanel>
                 </DataTemplate>
@@ -54,7 +60,7 @@
         Grid.Row="0"
         Grid.Column ="1"      
         Height="35"
-        Width="78"
+        Width="94"
         Padding="2" Margin="10,11,0,0">
             <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
                      BorderThickness="0"
@@ -65,10 +71,10 @@
                     Click="button_start_rss_fider_Click"
                     
                     Background="DarkCyan"
-                    Foreground="White" Width="70" FontSize="14"/>
+                    Foreground="White" Width="94" FontSize="17"/>
         </Border>
 
-        <TextBlock x:Name="Head_Title" Grid.Row="0" HorizontalAlignment="Left" Margin="472,10,0,0" TextWrapping="Wrap" Text="RSS Фидер" VerticalAlignment="Top" TextAlignment="Center" Height="33" Width="136" FontSize="22" Grid.ColumnSpan="2" Foreground="White"/>
+        <TextBlock x:Name="Head_Title" Grid.Row="0" HorizontalAlignment="Left" Margin="472,10,0,0" TextWrapping="Wrap" Text="RSS Фидер" VerticalAlignment="Top" TextAlignment="Center" Height="33" Width="136" FontSize="27" Grid.ColumnSpan="2" Foreground="White"/>
 
     </Grid>
 
